[package]
name = "tello"
description = "SDK for intel DJI Tello drone using the native api"
version = "0.3.0"
authors = ["Alex Halemba <alex-halemba@gmx.de>"]
edition = "2018"
repository = "https://github.com/Alexander89/rust-tello"
license-file = "./LICENCE"
readme = "./README.md"
keywords = ["Drone", "Tello", "DJI"]
documentation = "https://docs.rs/tello"

[lib]
name = "tello"
path = "src/lib.rs"

[[example]]
name = "fly"
path = "examples/fly/main.rs"

[[example]]
name = "video"
path = "examples/video/main.rs"

[[example]]
name = "fly_video"
path = "examples/fly_video/main.rs"

[dependencies]
byteorder = "1.1"
chrono = "0.4.0"

[dev-dependencies]
sdl2 = {version = "0.32", features = ["ttf"]}
glib = "0.9"
gstreamer = "0.15"
gstreamer-video = "0.15"
gstreamer-app = "0.15"
