[package]
name = "tello"
description = "SDK for intel DJI Tello drone using the native api"
version = "0.4.0"
authors = ["Alex Halemba <alex-halemba@gmx.de>"]
edition = "2018"
repository = "https://github.com/Alexander89/rust-tello"
license-file = "./LICENCE"
readme = "./README.md"
keywords = ["Drone", "Tello", "Ryze", "DJI", "Ryze Robotics"]
documentation = "https://docs.rs/tello"

[lib]
name = "tello"
path = "src/lib.rs"

[[example]]
name = "fly"
path = "examples/fly/main.rs"

[[example]]
name = "fly_gamepad"
path = "examples/fly_gamepad/main.rs"

[[example]]
name = "command_mode"
path = "examples/command_mode/main.rs"

[[example]]
name = "command_mode_keyboard"
path = "examples/command_mode_keyboard/main.rs"

[dependencies]
byteorder = "1.4"
chrono = "0.4.19"

[dev-dependencies]
sdl2 = {version = "0.34.5", features = ["ttf"]}
# glib = "0.9"
# gstreamer = "0.15"
# gstreamer-video = "0.15"
gilrs = "0.7.2"
futures = "0.3.16"
