[package]
name = "fly"
version = "0.1.0"
authors = ["Alex Halemba <alex-halemba@gmx.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "fly"
path = "fly/main.rs"

[dependencies]
tello = { path = "../" }
sdl2 = {version = "0.32", features = ["ttf"]}
glib = "0.9"
gstreamer = "0.15"
gstreamer-video = "0.15"
